--- a/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/user-web/src/main/webapp/WEB-INF/web.xml
@@ -85,11 +85,8 @@
     <welcome-file>/index.jsp</welcome-file>
   </welcome-file-list>
 
-  <!--    <resource-ref>-->
-  <!--        <description>DB Connection</description>-->
-  <!--        <res-ref-name>jdbc/UserPlatformDB</res-ref-name>-->
-  <!--        <res-type>javax.sql.DataSource</res-type>-->
-  <!--        <res-auth>Container</res-auth>-->
-  <!--    </resource-ref>-->
+  <listener>
+    <listener-class>org.jonathan.user.web.listener.DBConnectionInitializerListener</listener-class>
+  </listener>
 
 </web-app>
