--- a/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/user-web/src/main/webapp/WEB-INF/web.xml
@@ -9,13 +9,14 @@
         <param-name>application.name</param-name>
         <param-value>user-web</param-value>
     </context-param>
-
-    <listener>
+    <!--×¢ÊÍÍ¨¹ýSPI ServletÈÝÆ÷×¢²á¼àÌý-->
+    <!--Web.xmlÍ¨¹ýServlet ¼àÌýÆô¶¯-->
+    <!--<listener>
         <listener-class>org.jonathan.user.web.listener.ComponentContextInitializerListener</listener-class>
-    </listener>
-    <listener>
+    </listener>-->
+   <!-- <listener>
         <listener-class>org.jonathan.user.web.listener.TestingListener</listener-class>
-    </listener>
+    </listener>-->
     <servlet>
         <servlet-name>default</servlet-name>
         <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
