--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ac-reactive-messaging</module>
         <module>ac-rest-client</module>
         <module>ac-web-mvc</module>
+        <module>ac-cache</module>
     </modules>
     <scm>
         <url>https://github.com/JonathanHuInfo/actual-fromwork</url>
@@ -50,6 +51,7 @@
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <javax.inject.version>1</javax.inject.version>
         <javax.cdi-api.version>2.0</javax.cdi-api.version>
+        <javax.cache-api.version>1.1.1</javax.cache-api.version>
 
         <!-- MicroProfile 版本-->
         <microprofile-config-api.version>2.0</microprofile-config-api.version>
@@ -70,6 +72,8 @@
         <jolokia.version>1.6.2</jolokia.version>
         <resteasy.version>3.0.2.Final</resteasy.version>
         <tomcat7.version>7.0.37</tomcat7.version>
+        <lettuce.version>6.1.0.RELEASE</lettuce.version>
+        <jedis.version>3.5.2</jedis.version>
 
         <!-- Testing 版本 -->
         <junit.version>4.13</junit.version>
@@ -129,6 +133,13 @@
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>${javax.cdi-api.version}</version>
+            </dependency>
+
+            <!-- Java Cache API -->
+            <dependency>
+                <groupId>javax.cache</groupId>
+                <artifactId>cache-api</artifactId>
+                <version>${javax.cache-api.version}</version>
             </dependency>
 
 
@@ -266,6 +277,18 @@
                 <version>${tomcat7.version}</version>
             </dependency>
 
+            <!-- Redis Java Client - Lettuce -->
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
             <!-- Testing Dependencies -->
 
             <!-- JUnit -->
