第六周作业
1、通过Lettuce实现一套Redis CacheManager以及Cache
2、提供一套抽象API实现对象的序列化和反序列化

--- a/ac-cache/src/main/resources/META-INF/default-caching-provider.properties
+++ b/ac-cache/src/main/resources/META-INF/default-caching-provider.properties
@@ -1,6 +1,6 @@
 # The default properties for ConfigurableCachingProvider
 
 ## CacheManager scheme-implementation mappings
-javax.cache.CacheManager.mappings.in-memory=org.jonathan.cache.InMemoryCacheManager
+javax.cache.CacheManager.mappings.in-memory=org.jonathan.cache.provider.memory.InMemoryCacheManager
 
-javax.cache.CacheManager.mappings.redis=org.jonathan.cache.redis.JedisCacheManager
+javax.cache.CacheManager.mappings.redis=org.jonathan.cache.provider.redis.jedis.JedisCacheManager
