--- a/user-web/pom.xml
+++ b/user-web/pom.xml
@@ -101,8 +101,8 @@
             <artifactId>jolokia-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- ActiveMQ -->
