--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <maven.source.version>3.2.1</maven.source.version>
         <maven.jar.version>3.2.0</maven.jar.version>
         <maven.war.version>3.3.1</maven.war.version>
+        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
         <maven.flatten.version>1.2.5</maven.flatten.version>
         <maven.compiler.source>8</maven.compiler.source>
@@ -349,6 +350,13 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>${maven.war.version}</version>
                 </plugin>
+
+                <!-- Test插件 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -398,6 +406,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- Test测试插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.*</include>
+                        <include>**/*Test.*</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
