--- a/ac-web-mvc/pom.xml
+++ b/ac-web-mvc/pom.xml
@@ -36,5 +36,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jonathan</groupId>
+            <artifactId>ac-dependency-injection</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
