--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <derby.version>10.1.3.1</derby.version>
         <hibernate.version>5.4.29.Final</hibernate.version>
         <hibernate.validator.version>5.4.3.Final</hibernate.validator.version>
-        <glassfish-el.version>3.0.1-b08</glassfish-el.version>
+
         <jackson.version>2.9.5</jackson.version>
         <activemq.version>5.9.1</activemq.version>
         <jolokia.version>1.6.2</jolokia.version>
@@ -146,6 +146,12 @@
                 <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>${javax.cdi-api.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.el</groupId>
+                        <artifactId>javax.el-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Java Cache API -->
@@ -234,11 +240,6 @@
                 <version>${hibernate.validator.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.glassfish</groupId>
-                <artifactId>javax.el</artifactId>
-                <version>${glassfish-el.version}</version>
-            </dependency>
 
             <!-- Jackson -->
             <dependency>
@@ -430,6 +431,11 @@
                         <include>**/*Test.*</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <!-- 处理与依赖相关的插件 (命令: mvn dependency:tree >   /Users/apple/Downloads/TestsReport/maven.txt)-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
